--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   provider: ^6.0.1
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.0.1
+  google_fonts: ^2.1.0
+  salomon_bottom_bar: ^3.1.0
+  flutter_icons: ^1.1.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
