--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -22,6 +22,9 @@ environment:
 
 dependencies: 
   provider: ^6.0.1
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
+  cloud_firestore: ^3.1.5
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.0.1
