--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_screenutil: ^5.0.1
   google_fonts: ^2.1.0
   salomon_bottom_bar: ^3.1.0
+  charts_flutter: ^0.12.0
+  responsive_builder: ^0.4.1
   
   
 
