--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   image_picker: ^0.8.4+4
   path: ^1.8.0
   firebase_storage: ^10.2.5
+  google_maps_flutter: ^2.1.1
+  json_annotation: ^4.4.0
+  json_serializable: ^6.1.3
+  http: ^0.13.4
   
   
   
@@ -47,6 +51,7 @@ dependencies:
   flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
+  build_runner: ^2.1.7
   flutter_test:
     sdk: flutter
 
