--- a/rz_tours/android/app/src/main/AndroidManifest.xml
+++ b/rz_tours/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.rz_tours">
    <application
         android:label="rz_tours"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
