--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -25,13 +25,24 @@ dependencies:
   firebase_core: ^1.10.6
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.5
-  flutter:
-    sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+  responsive_builder: ^0.4.1
   flutter_screenutil: ^5.0.1
   google_fonts: ^2.1.0
+  salomon_bottom_bar: ^3.2.0
+  flutter_datetime_picker: ^1.5.1
+  google_maps_flutter: ^2.1.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+
+  flutter:
+    sdk: flutter
+  
   salomon_bottom_bar: ^3.1.0
   charts_flutter: ^0.12.0
-  responsive_builder: ^0.4.1
   image_picker: ^0.8.4+4
   path: ^1.8.0
   firebase_storage: ^10.2.5
