--- a/rz_tours/android/app/src/main/AndroidManifest.xml
+++ b/rz_tours/android/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+              <!--new added-->
+            <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDATU3iPgOcVuW_pTfnzhfhe-NqQXdOEh8" />
             <!-- Displays an Android View that continues showing the launch screen
                  Drawable until Flutter paints its first frame, then this splash
                  screen fades out. A splash screen is useful to avoid any visual
