--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   #firebase_core: ^1.10.6
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.5
+  json_serializable: ^6.1.4
+  http: ^0.13.4
+  json_annotation: ^4.4.0
+  google_maps_flutter: ^2.1.1
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.0.1
@@ -43,6 +47,7 @@ dependencies:
   flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
+  build_runner: ^2.1.7
   flutter_test:
     sdk: flutter
 
