--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -36,24 +36,25 @@ dependencies:
   salomon_bottom_bar: ^3.2.0
   flutter_datetime_picker: ^1.5.1
   google_maps_flutter: ^2.1.1
-
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/logo.png"
-
-  flutter:
-    sdk: flutter
-  
-  salomon_bottom_bar: ^3.1.0
+  json_serializable: ^6.1.4
   charts_flutter: ^0.12.0
   image_picker: ^0.8.4+4
   path: ^1.8.0
   firebase_storage: ^10.2.5
-  google_maps_flutter: ^2.1.1
   json_annotation: ^4.4.0
-  json_serializable: ^6.1.3
   http: ^0.13.4
+
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/rzlogo.jpg"
+
+  flutter:
+    sdk: flutter
+  
+ 
   
   
   
