--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -22,7 +22,7 @@ environment:
 
 dependencies: 
   provider: ^6.0.1
-  firebase_core: ^1.10.6
+  #firebase_core: ^1.10.6
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.5
   json_serializable: ^6.1.4
@@ -33,28 +33,9 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.0.1
   google_fonts: ^2.1.0
-  salomon_bottom_bar: ^3.2.0
-  flutter_datetime_picker: ^1.5.1
-  google_maps_flutter: ^2.1.1
-
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/logo.png"
-
-  flutter:
-    sdk: flutter
-  
   salomon_bottom_bar: ^3.1.0
   charts_flutter: ^0.12.0
-  image_picker: ^0.8.4+4
-  path: ^1.8.0
-  firebase_storage: ^10.2.5
-  google_maps_flutter: ^2.1.1
-  json_annotation: ^4.4.0
-  json_serializable: ^6.1.3
-  http: ^0.13.4
-  
+  responsive_builder: ^0.4.1
   
   
 
@@ -84,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - images/
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
