--- a/rz_tours/android/app/src/main/AndroidManifest.xml
+++ b/rz_tours/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rz_tours">
    <application
-        android:label="rz_tours"
+        android:label="Razzaz Tours"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
