--- a/rz_tours/pubspec.yaml
+++ b/rz_tours/pubspec.yaml
@@ -36,7 +36,12 @@ dependencies:
   salomon_bottom_bar: ^3.1.0
   charts_flutter: ^0.12.0
   responsive_builder: ^0.4.1
-  
+  datetime_picker_formfield: ^2.0.0
+  image_picker: ^0.8.4+4
+  firebase_storage: ^10.2.5
+  path: ^1.8.0
+
+
   
 
 
